# ecmaos

./: .gitignore  DEVICES.md  NEWS.md  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.changeset/: chilled-crabs-retire.md  chilly-apples-cough.md  curly-lions-greet.md  dull-doors-give.md  dull-hornets-protect.md  friendly-weeks-notice.md  kind-rockets-add.md  lovely-cats-clean.md  mighty-houses-count.md  nervous-rivers-sleep.md  nervous-seahorses-shave.md  nice-clouds-complain.md  nice-oranges-fail.md  nice-owls-sleep.md  odd-masks-sneeze.md  popular-rocks-repair.md  red-meals-shake.md  silent-donuts-retire.md  stale-tigers-rescue.md  strong-plants-happen.md  stupid-deers-chew.md  thick-oranges-report.md  tiny-deers-destroy.md  tiny-dryers-film.md  tough-crews-lie.md  tricky-buttons-tan.md  twelve-cooks-deny.md  wet-mice-give.md  wild-cherries-shake.md  young-actors-enjoy.md
apps/ai/: CHANGELOG.md  package.json  pnpm-lock.yaml
apps/boilerplate/: CHANGELOG.md  package.json  pnpm-lock.yaml
apps/code/: CHANGELOG.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/edit/: CHANGELOG.md  build.cjs  package.json  pnpm-lock.yaml
apps/news/: CHANGELOG.md  package.json  pnpm-lock.yaml
core/bios/: CHANGELOG.md  CMakeLists.txt  build.sh  package.json  pnpm-lock.yaml
core/bios/src/: bios.cpp  bios.d.ts  index.js
core/bios/src/commands/: cat.cpp  commands.hpp  echo.cpp  execute.cpp  ls.cpp  rm.cpp
docs/: index.html  modules.html
utils/: fetch-fs-server.js  install-emsdk.sh  sync-html-version.js  sync-tutorials.sh  sync-zenfs.sh
(+838 files in other folders)
